--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,16 +15,15 @@
     Javascript and reload this page!</h2></noscript>
 <div id="main-content" class="container">
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4">
             <form class="form-inline">
                 <div class="form-group">
-                    <button id="connect" class="btn btn-default" type="submit">Connect</button>
-                    <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect
-                    </button>
+                    <button id="connect" class="btn btn-default" type="submit">Join the Queue</button>
+                    <button id="disconnect" class="btn btn-default" type="submit">Leave</button>
                 </div>
             </form>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
             <form class="form-inline">
                 <div class="form-group">
                     <label for="name">What is your name?</label>
@@ -35,11 +34,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-8">
             <table id="conversation" class="table table-striped">
                 <thead>
                 <tr>
-                    <th>Greetings</th>
+                    <th>Queue:</th>
                 </tr>
                 </thead>
                 <tbody id="greetings">
